--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,3 +1,4 @@
 @import './global_style/fonts.scss',
         './global_style/variables.scss',
-        './global_style/global.scss'
+        './global_style/global.scss',
+        './blocks/main-nav.scss'
