--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,4 +1,6 @@
 @import './global_style/fonts.scss',
         './global_style/variables.scss',
         './global_style/global.scss',
-        './blocks/main-nav.scss'
+        './blocks/main-nav.scss',
+        './blocks/main.scss',
+        './blocks/site-intro.scss'
