--- a/source/scss/blocks/site-intro.scss
+++ b/source/scss/blocks/site-intro.scss
@@ -1,15 +1,131 @@
 .site-intro {
-  min-height: 500px;
-  padding-top: 80px;
+  min-height: 450px;
+  padding-top: 120px;
   background-image: url('../../img/hero-mobile@1x.jpg');
   background-repeat: no-repeat;
   background-position: center 0;
+  background-color: #f9f9f9;
 }
 
 .site-intro__title {
+  width: 245px;
   font-size: 27px;
   text-align: center;
-  width: 245px;
+  margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.site-intro__buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.site-intro__button {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  padding-left: 30px;
+  font-size: 19px;
+  font-weight: bold;
+  color: var(--white);
+  text-align: left;
+
+  span {
+    transition: opacity 0.2s ease;
+  }
+
+  &:hover {
+
+    svg {
+      opacity: 0.7;
+    }
+  }
+
+  &:active {
+
+    span {
+      opacity: 0.3;
+    }
+
+    svg {
+      opacity: 0.3;
+    }
+  }
+
+  svg {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0.5;
+    transition: 0.2s;
+  }
+
+  &:first-child {
+    background-color: var(--medium-aquamarine);
+
+    svg {
+      right: 40px;
+    }
+  }
+
+  &:last-child {
+    background-color: var(--aquamarine);
+
+    svg {
+      right: 30px;
+    }
+  }
+}
+
+@media (min-width: $tablet) {
+
+  .site-intro {
+    min-height: 750px;
+    background-image: url('../../img/hero-tablet@2x.jpg');
+    background-position: center -70px;
+    background-size: auto 750px;
+  }
+
+  .site-intro__title {
+    width: 500px;
+    margin-bottom: 345px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .site-intro__buttons {
+    flex-direction: row;
+  }
+
+  .site-intro__button {
+    position: relative;
+    height: 120px;
+    padding-left: 35px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      left: 0;
+      bottom: 0;
+      height: 4px;
+      background-image: url('../../img/bg-zigzag-fill.svg');
+      background-position: 0 0;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
+}
+
+@media (min-width: $desktop) {
+  .site-intro {
+    background-image: url('../../img/hero-desktop@2x.jpg');
+    background-size: auto 770px;
+  }
+
+  .site-intro__title {
+    width: 600px;
+    margin-bottom: 295px;
+  }
 }
