--- a/source/scss/global_style/variables.scss
+++ b/source/scss/global_style/variables.scss
@@ -3,6 +3,7 @@
   --black: #000000;
   --dirty-white: #f1f1f1;
   --bright-gray: #ececec;
+  --grey: #797979;
   --outer-space: #444444;
   --medium-aquamarine: #63d1bb;
   --aquamarine: #56c3b2;
