--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,4 +3,5 @@
         './global_style/global.scss',
         './blocks/main-nav.scss',
         './blocks/main.scss',
-        './blocks/site-intro.scss'
+        './blocks/site-intro.scss',
+        './blocks/top-product.scss'
