--- a/source/scss/blocks/site-intro.scss
+++ b/source/scss/blocks/site-intro.scss
@@ -1,9 +1,10 @@
 .site-intro {
   min-height: 450px;
-  padding-top: 120px;
-  background-image: url('../../img/hero-mobile@1x.jpg');
+  padding-top: 80px;
+  background-image: url('../../img/hero-mobile@2x.jpg');
   background-repeat: no-repeat;
-  background-position: center 0;
+  background-position: center -10px;
+  background-size: auto 385px;
   background-color: #f9f9f9;
 }
 
@@ -11,7 +12,7 @@
   width: 245px;
   font-size: 27px;
   text-align: center;
-  margin-bottom: 120px;
+  margin-bottom: 135px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -78,10 +79,23 @@
   }
 }
 
+@media (max-width: $phone-max) {
+  .site-intro {
+    .container {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+}
+
 @media (min-width: $tablet) {
 
   .site-intro {
-    min-height: 750px;
+    min-height: 690px;
+		padding-top: 120px;
     background-image: url('../../img/hero-tablet@2x.jpg');
     background-position: center -70px;
     background-size: auto 750px;
@@ -108,8 +122,8 @@
       position: absolute;
       width: 100%;
       left: 0;
-      bottom: 0;
-      height: 4px;
+      bottom: -10px;
+      height: 20px;
       background-image: url('../../img/bg-zigzag-fill.svg');
       background-position: 0 0;
       background-repeat: no-repeat;
@@ -128,4 +142,11 @@
     width: 600px;
     margin-bottom: 295px;
   }
+
+	.site-intro__button {
+		&::after {
+			bottom: -17px;
+      height: 31px;
+		}
+	}
 }
