about-us secton done

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -4,4 +4,5 @@
         './blocks/main-nav.scss',
         './blocks/main.scss',
         './blocks/site-intro.scss',
-        './blocks/top-product.scss'
+        './blocks/top-product.scss',
+        './blocks/about-us.scss'
