--- a/source/scss/blocks/top-product.scss
+++ b/source/scss/blocks/top-product.scss
@@ -9,11 +9,11 @@
     width: 100%;
     left: 0;
     bottom: 0;
-    height: 10px;
+    height: 5px;
     background-image: url('../../img/bg-zigzag-line.svg');
     background-position: 0 0;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat;
+    background-size: contain;
   }
 }
 
@@ -90,7 +90,11 @@ margin-bottom: 30px;
 
   .top-product {
     padding-top: 45px;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
+
+    &::after {
+      height: 15px;
+    }
   }
 
   .top-product__wrapper {
@@ -132,6 +136,11 @@ margin-bottom: 30px;
 
   .top-product {
     padding-top: 120px;
+    padding-bottom: 100px;
+
+    &::after {
+      height: 20px;
+    }
   }
 
   .top-product__img-wrapper {
