--- a/source/scss/global_style/global.scss
+++ b/source/scss/global_style/global.scss
@@ -87,14 +87,10 @@ a {
   color: inherit;
   transition: all 0.2s ease;
 
-  &:hover  {
-    color: var(--white);
-    background-color: var(--outer-space);
-  }
-
   &:active {
-    transition: 0.1s ease;
+    transition: all 0.1s ease;
     color: #797979;
+    background-color: var(--outer-space);
   }
 }
 
@@ -115,6 +111,20 @@ a {
 }
 
 @media (min-width: $tablet) {
+
+  .button {
+
+    &:hover  {
+      color: var(--white);
+      background-color: var(--outer-space);
+    }
+
+    &:active {
+      transition: all 0.1s ease;
+      color: #797979;
+      background-color: var(--outer-space);
+    }
+  }
 
   .container {
     width: $tablet;
