--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,4 +5,5 @@
         './blocks/main.scss',
         './blocks/site-intro.scss',
         './blocks/top-product.scss',
-        './blocks/about-us.scss'
+        './blocks/about-us.scss',
+        './blocks/reviews.scss'
