--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,4 +6,5 @@
         './blocks/site-intro.scss',
         './blocks/top-product.scss',
         './blocks/about-us.scss',
-        './blocks/reviews.scss'
+        './blocks/reviews.scss',
+        './blocks/contacts.scss'
