--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -7,4 +7,5 @@
         './blocks/top-product.scss',
         './blocks/about-us.scss',
         './blocks/reviews.scss',
-        './blocks/contacts.scss'
+        './blocks/contacts.scss',
+        './blocks/map.scss'
