--- a/source/scss/global_style/global.scss
+++ b/source/scss/global_style/global.scss
@@ -77,6 +77,7 @@ a {
 }
 
 .button {
+  display: block;
   min-height: 50px;
   padding: 13px 40px;
   font-size: 17px;
@@ -111,6 +112,10 @@ a {
 }
 
 @media (min-width: $tablet) {
+
+  body {
+    font-size: 17px;
+  }
 
   .button {
 
