--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -8,4 +8,5 @@
         './blocks/about-us.scss',
         './blocks/reviews.scss',
         './blocks/contacts.scss',
-        './blocks/map.scss'
+        './blocks/map.scss',
+        './blocks/footer.scss'
