catalog section done

--- a/source/scss/blocks/main-nav.scss
+++ b/source/scss/blocks/main-nav.scss
@@ -212,6 +212,10 @@
     }
   }
 
+  .page-header--catalog .main-nav {
+    background: linear-gradient(to bottom, #ffffff 90px, #f1f1f1 90px);
+  }
+
   .main-nav__wrapper {
     position: relative;
   }
