--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -9,4 +9,5 @@
         './blocks/reviews.scss',
         './blocks/contacts.scss',
         './blocks/map.scss',
-        './blocks/footer.scss'
+        './blocks/footer.scss',
+        './blocks/catalog.scss'
