--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -10,4 +10,5 @@
         './blocks/contacts.scss',
         './blocks/map.scss',
         './blocks/footer.scss',
-        './blocks/catalog.scss'
+        './blocks/catalog.scss',
+        './blocks/production.scss'
