form mobile done

--- a/source/scss/global_style/global.scss
+++ b/source/scss/global_style/global.scss
@@ -102,6 +102,15 @@ a {
   font-weight: bold;
 }
 
+.title-sub-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 175px;
+  margin-bottom: 30px;
+  background-color: var(--dirty-white);
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -140,6 +149,25 @@ a {
     font-size: 43px;
     line-height: 50px;
   }
+
+  .title-sub-page {
+    position: relative;
+    margin-bottom: 80px;
+    padding-bottom: 50px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      left: 0;
+      bottom: -15px;
+      height: 30px;
+      background-image: url('../../img/bg-zigzag-fill.svg');
+      background-position: 0 0;
+      background-repeat: repeat;
+      background-size: contain;
+    }
+  }
 }
 
 @media (min-width: $desktop) {
@@ -153,5 +181,10 @@ a {
   .title {
     font-size: 53px;
     line-height: 57px;
+  }
+
+  .title-sub-page {
+    height: 200px;
+    padding-bottom: 65px;
   }
 }
