--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -11,4 +11,5 @@
         './blocks/map.scss',
         './blocks/footer.scss',
         './blocks/catalog.scss',
-        './blocks/production.scss'
+        './blocks/production.scss',
+        './blocks/form.scss'
