--- a/source/scss/blocks/main-nav.scss
+++ b/source/scss/blocks/main-nav.scss
@@ -212,7 +212,8 @@
     }
   }
 
-  .page-header--catalog .main-nav {
+  .page-header--catalog .main-nav,
+  .page-header--form .main-nav {
     background: linear-gradient(to bottom, #ffffff 90px, #f1f1f1 90px);
   }
 
