--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -62,7 +62,7 @@
 
   svg {
     opacity: 0.3;
-    transition: all 0.2s ease;
+    transition: all 0.2s ease-in-out;
   }
 
   &:hover {
@@ -143,10 +143,10 @@
 
   .catalog__item {
     flex-direction: column;
-    transition: box-shadow 0.2s ease;
+    transition: box-shadow 0.2s ease-in-out;
 
     &:hover {
-      box-shadow: 0 20px 30px 3px rgba(0, 0, 0, 0.2);
+      box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px;
     }
   }
 
