--- a/source/scss/blocks/production.scss
+++ b/source/scss/blocks/production.scss
@@ -29,7 +29,7 @@
   transform: translateX(-50%) translateY(-50%);
 
   svg {
-    transition: transform 0.1s ease;
+    transition: transform 0.1s ease-in-out;
   }
 
   &:active {
