--- a/source/scss/blocks/reviews.scss
+++ b/source/scss/blocks/reviews.scss
@@ -60,7 +60,7 @@
   }
 
   svg {
-    transition: 0.5s ease;
+    transition: 0.5s ease-in-out;
   }
 }
 
@@ -114,7 +114,7 @@
     width: 80px;
 
     svg {
-      transition: transform 0.2s ease;
+      transition: transform 0.2s ease-in-out;
     }
 
     &:hover {
@@ -125,7 +125,7 @@
 
     &:active {
       svg {
-        transition: 0.05s ease;
+        transition: 0.05s ease-in-out;
         opacity: 0.3;
       }
     }
