--- a/source/scss/blocks/top-product.scss
+++ b/source/scss/blocks/top-product.scss
@@ -64,6 +64,10 @@ margin-bottom: 30px;
   margin-bottom: 30px;
 }
 
+.top-product__img {
+  width: 100%;
+}
+
 .top-product__buy {
   display: flex;
   flex-direction: column;
