--- a/source/scss/blocks/contacts.scss
+++ b/source/scss/blocks/contacts.scss
@@ -13,7 +13,7 @@
   font-style: normal;
 
   span {
-    width: 20%;
+    width: 30%;
   }
 
   a {
@@ -73,8 +73,8 @@
   .contacts__mail {
     width: 50%;
 
-    span:last-child {
-      width: 120%;
+    span {
+      width: 20%;
     }
   }
 
