--- a/source/scss/blocks/site-intro.scss
+++ b/source/scss/blocks/site-intro.scss
@@ -91,6 +91,15 @@
   }
 }
 
+@media (min-width: 460px) and (max-width: $phone-max) {
+
+  .site-intro__buttons {
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+  }
+}
+
 @media (min-width: $tablet) {
 
   .site-intro {
