--- a/css/style.css
+++ b/css/style.css
@@ -448,32 +448,32 @@ main {
 }
 
 .about-us__item:nth-child(1) {
-  background-image: url("../../img/icon-feature-flower.svg");
+  background-image: url("../img/icon-feature-flower.svg");
   background-size: 32px 37px;
 }
 
 .about-us__item:nth-child(2) {
-  background-image: url("../../img/icon-feature-money.svg");
+  background-image: url("../img/icon-feature-money.svg");
   background-size: 47px 27px;
 }
 
 .about-us__item:nth-child(3) {
-  background-image: url("../../img/icon-feature-heart.svg");
+  background-image: url("../img/icon-feature-heart.svg");
   background-size: 34px 27px;
 }
 
 .about-us__item:nth-child(4) {
-  background-image: url("../../img/icon-feature-ball.svg");
+  background-image: url("../img/icon-feature-ball.svg");
   background-size: 35px 34px;
 }
 
 .about-us__item:nth-child(5) {
-  background-image: url("../../img/icon-feature-rocket.svg");
+  background-image: url("../img/icon-feature-rocket.svg");
   background-size: 55px 23px;
 }
 
 .about-us__item:nth-child(6) {
-  background-image: url("../../img/icon-feature-gift.svg");
+  background-image: url("../img/icon-feature-gift.svg");
   background-size: 33px 32px;
 }
 
