--- a/source/scss/blocks/contacts.scss
+++ b/source/scss/blocks/contacts.scss
@@ -89,7 +89,7 @@
   .contacts__title {
     padding-top: 50px;
     padding-bottom: 50px;
-    background-image: url('../../img/icon-flag.svg');
+    background-image: url('../img/icon-flag.svg');
     background-repeat: no-repeat;
     background-position: 100% 50%;
     background-size: 47px 81px;
