--- a/source/scss/blocks/production.scss
+++ b/source/scss/blocks/production.scss
@@ -13,7 +13,7 @@
   font-size: 17px;
   line-height: 24px;
   color: var(--black);
-  background-image: url('../../img/icon-video.svg');
+  background-image: url('../img/icon-video.svg');
   background-repeat: no-repeat;
   background-position: 35px 50%;
 }
