--- a/source/scss/blocks/about-us.scss
+++ b/source/scss/blocks/about-us.scss
@@ -21,32 +21,32 @@
   background-repeat: no-repeat;
 
   &:nth-child(1) {
-    background-image: url('../../img/icon-feature-flower.svg');
+    background-image: url('../img/icon-feature-flower.svg');
     background-size: 32px 37px;
   }
 
   &:nth-child(2) {
-    background-image: url('../../img/icon-feature-money.svg');
+    background-image: url('../img/icon-feature-money.svg');
     background-size: 47px 27px;
   }
 
   &:nth-child(3) {
-    background-image: url('../../img/icon-feature-heart.svg');
+    background-image: url('../img/icon-feature-heart.svg');
     background-size: 34px 27px;
   }
 
   &:nth-child(4) {
-    background-image: url('../../img/icon-feature-ball.svg');
+    background-image: url('../img/icon-feature-ball.svg');
     background-size: 35px 34px;
   }
 
   &:nth-child(5) {
-    background-image: url('../../img/icon-feature-rocket.svg');
+    background-image: url('../img/icon-feature-rocket.svg');
     background-size: 55px 23px;
   }
 
   &:nth-child(6) {
-    background-image: url('../../img/icon-feature-gift.svg');
+    background-image: url('../img/icon-feature-gift.svg');
     background-size: 33px 32px;
   }
 }
