--- a/source/scss/blocks/reviews.scss
+++ b/source/scss/blocks/reviews.scss
@@ -10,7 +10,7 @@
     left: 0;
     bottom: 0;
     height: 5px;
-    background-image: url('../../img/bg-zigzag-line.svg');
+    background-image: url('../img/bg-zigzag-line.svg');
     background-position: 0 0;
     background-repeat: repeat;
     background-size: contain;
@@ -82,7 +82,7 @@
   .reviews__wrapper {
     position: relative;
     padding-top: 80px;
-    background-image: url('../../img/review@2x.jpg');
+    background-image: url('../img/review@2x.jpg');
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: contain;
