--- a/source/scss/blocks/top-product.scss
+++ b/source/scss/blocks/top-product.scss
@@ -10,7 +10,7 @@
     left: 0;
     bottom: 0;
     height: 5px;
-    background-image: url('../../img/bg-zigzag-line.svg');
+    background-image: url('../img/bg-zigzag-line.svg');
     background-position: 0 0;
     background-repeat: repeat;
     background-size: contain;
