--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ main {
 .site-intro {
   min-height: 450px;
   padding-top: 80px;
-  background-image: url("../../img/hero-mobile@2x.jpg");
+  background-image: url("../img/hero-mobile@2x.jpg");
   background-repeat: no-repeat;
   background-position: center -10px;
   background-size: auto 385px;
@@ -355,7 +355,7 @@ main {
   left: 0;
   bottom: 0;
   height: 5px;
-  background-image: url("../../img/bg-zigzag-line.svg");
+  background-image: url("../img/bg-zigzag-line.svg");
   background-position: 0 0;
   background-repeat: repeat;
   background-size: contain;
@@ -490,7 +490,7 @@ main {
   left: 0;
   bottom: 0;
   height: 5px;
-  background-image: url("../../img/bg-zigzag-line.svg");
+  background-image: url("../img/bg-zigzag-line.svg");
   background-position: 0 0;
   background-repeat: repeat;
   background-size: contain;
@@ -776,7 +776,7 @@ footer {
   font-size: 17px;
   line-height: 24px;
   color: var(--black);
-  background-image: url("../../img/icon-video.svg");
+  background-image: url("../img/icon-video.svg");
   background-repeat: no-repeat;
   background-position: 35px 50%;
 }
@@ -1201,7 +1201,7 @@ input[type=checkbox]:checked + span::after {
   .site-intro {
     min-height: 690px;
     padding-top: 120px;
-    background-image: url("../../img/hero-tablet@2x.jpg");
+    background-image: url("../img/hero-tablet@2x.jpg");
     background-position: center -70px;
     background-size: auto 750px;
   }
@@ -1230,7 +1230,7 @@ input[type=checkbox]:checked + span::after {
     left: 0;
     bottom: -10px;
     height: 20px;
-    background-image: url("../../img/bg-zigzag-fill.svg");
+    background-image: url("../img/bg-zigzag-fill.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1313,7 +1313,7 @@ input[type=checkbox]:checked + span::after {
   .reviews__wrapper {
     position: relative;
     padding-top: 80px;
-    background-image: url("../../img/review@2x.jpg");
+    background-image: url("../img/review@2x.jpg");
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: contain;
@@ -1392,7 +1392,7 @@ input[type=checkbox]:checked + span::after {
   .contacts__title {
     padding-top: 50px;
     padding-bottom: 50px;
-    background-image: url("../../img/icon-flag.svg");
+    background-image: url("../img/icon-flag.svg");
     background-repeat: no-repeat;
     background-position: 100% 50%;
     background-size: 47px 81px;
@@ -1721,7 +1721,7 @@ input[type=checkbox]:checked + span::after {
   }
 
   .site-intro {
-    background-image: url("../../img/hero-desktop@2x.jpg");
+    background-image: url("../img/hero-desktop@2x.jpg");
     background-size: auto 770px;
   }
 
