--- a/source/scss/global_style/global.scss
+++ b/source/scss/global_style/global.scss
@@ -152,7 +152,7 @@ a {
       left: 0;
       bottom: -15px;
       height: 30px;
-      background-image: url('../../img/bg-zigzag-fill.svg');
+      background-image: url('../img/bg-zigzag-fill.svg');
       background-position: 0 0;
       background-repeat: repeat;
       background-size: contain;
