--- a/source/scss/global_style/fonts.scss
+++ b/source/scss/global_style/fonts.scss
@@ -2,8 +2,8 @@
   font-weight: normal;
   font-family: 'Open-sans';
   src:
-    url('../../fonts/opensans.woff2') format('woff2'),
-    url('../../fonts/opensans.woff') format('woff');
+    url('../fonts/opensans.woff2') format('woff2'),
+    url('../fonts/opensans.woff') format('woff');
   font-style: normal;
   font-display: swap;
 }
@@ -12,8 +12,8 @@
   font-weight: bold;
   font-family: 'Open-sans';
   src:
-    url('../../fonts/opensansbold.woff2') format('woff2'),
-    url('../../fonts/opensansbold.woff') format('woff');
+    url('../fonts/opensansbold.woff2') format('woff2'),
+    url('../fonts/opensansbold.woff') format('woff');
   font-style: normal;
   font-display: swap;
 }
